# terminator

./: .gitignore  BRIEF.md  CLAUDE.md  README.md  pyproject.toml
evals/: cases.json  eval_suite.py
src/natural_terminal/: __init__.py  config.py  executor.py  llm.py  main.py  prompt.py  ui.py
src/terminator/: __init__.py  config.py  context.py  llm.py  main.py  ui.py
tests/: conftest.py  test_config.py  test_context.py  test_executor.py  test_llm.py  test_main.py  test_prompt.py
