[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terminator"
version = "0.1.0"
description = "Natural language terminal powered by local LLMs via llama.cpp"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "pytest-cov>=5.0",
]

[project.scripts]
terminator = "terminator.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/terminator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
